[project]
name = "cv-cuda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda12x>=13.3.0",
    "cvcuda-cu12",
    "cykooz-resizer>=3.0.0",
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "pytest-benchmark>=4.0.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "torch>=2.5.0",
]

[tool.uv.sources]
cvcuda-cu12 = { url = "https://github.com/CVCUDA/CV-CUDA/releases/download/v0.12.0-beta/cvcuda_cu12-0.12.0b0-cp311-cp311-linux_x86_64.whl" }
